# ft_malloc

./: CMakeLists.txt  Makefile
includes/: ft_malloc.h  sys_malloc.h
libft/: Makefile  libft.h
src/: 1tiny_malloc.c  1tiny_malloc.c12  check_pointer.c  common.c  large_free.c  large_malloc.c  libft.c  main.c  printers.c  realloc.c  show_alloc_mem.c  show_alloc_mem_ex.c  small_free.c  small_malloc.c  small_malloc_norm.c  tiny_free.c  tiny_malloc.c  utils.c
